<resources>
    <string name="app_name">NXT Open Cube</string>
    <string name="app_text">"NXT OpenCube
Original Code: Manfred Matuszek
V1 November 2022"</string>
    <string name="value_nxtname1">NXT SM1</string>
    <string name="value_nxtname2">NXT SM2</string>
    <string name="value_progname">NxtCubeMachine</string>
    <string name="value_waitopen">265</string>
    <string name="value_waitclose">265</string>
    <string name="value_waitturn">255</string>
    <string name="value_waitdoubleturn">505</string>
    <string name="menutitle">Menu</string>
    <string name="menuitem_init">Initialise</string>
    <string name="menuitem_settings">Settings</string>
    <string name="menuitem_patterns">Patterns</string>
    <string name="menuitem_manual">Manual control</string>
    <string name="menuitem_quit">Quit</string>
    <string name="status_start">NXT Cube Machine Started.</string>
    <string name="status_lifterinit">Lifter initialised.</string>
    <string name="status_lifterup">Raising lifter.</string>
    <string name="status_takecube">"Grabbing the Rubik's Cube."</string>
    <string name="status_startposition">Reached start position.</string>
    <string name="status_photossaved">Saved photos.</string>
    <string name="status_colorsdetected">Colors (Cube Definition):</string>
    <string name="status_cubesolved">Cube solved:</string>
    <string name="status_cubeerror">Error:</string>
    <string name="status_cubeerrortext">The colors were not recognized correctly.</string>
    <string name="status_cubemoved">"Rubik's Cube ready."</string>
    <string name="status_finished">Finished.</string>
    <string name="status_canceled">Program aborted.</string>
    <string name="status_stopped">Program stopped.</string>
    <string name="status_closed">Program closed.</string>
    <string name="status_simulation">Simulated Solve...</string>
    <string name="dialog_bluetoothtitle">Bluetooth connection</string>
    <string name="dialog_bluetooth">Establishing Bluetooth connection...</string>
    <string name="dialog_bluetoothnoconn">The Bluetooth connection could not be established!</string>
    <string name="dialog_bluetoothproblem">"Could not find the NXT blocks!

Check paired devices and settings."</string>
    <string name="dialog_cubetitle">Nxt OpenCube</string>
    <string name="dialog_lifter">Lifter position?</string>
    <string name="dialog_lifterbottom">Bottom</string>
    <string name="dialog_liftertop">Top</string>
    <string name="dialog_cubetext">"Insert Rubik's Cube."</string>
    <string name="dialog_ok">OK</string>
    <string name="toast_nobluetooth">Sadly, the NXT CubeMachine does not work without Bluetooth.</string>
    <string name="toast_connection">Connected</string>
    <string name="toast_picsaved">Image saved</string>
    <string name="main_time">0:00.00</string>
    <string name="main_buttonstart1">Start</string>
    <string name="main_buttonstart2">Init</string>
    <string name="main_buttonstop">Stop</string>
    <string name="init_title1">Bluetooth</string>
    <string name="init_title2">NXT Program</string>
    <string name="init_title3">Lifter</string>
    <string name="init_buttonconnection">Establish connection</string>
    <string name="init_buttonstart">Start</string>
    <string name="init_buttonstop">Stop</string>
    <string name="init_buttonlifter">Initialise</string>
    <string name="settings_title1">NXT</string>
    <string name="settings_title2">Wait times [ms]</string>
    <string name="settings_title3">Save settings</string>
    <string name="settings_title4">Patterns:</string>
    <string name="settings_title5">Save Pattern Choice:</string>
    <string name="settings_labelnxt1">NXT 1:</string>
    <string name="settings_labelnxt2">NXT 2:</string>
    <string name="settings_labelprogram">Program:</string>
    <string name="settings_labelwaitopen">Open:</string>
    <string name="settings_labelwaitclose">Close:</string>
    <string name="settings_labelwaitturn">Turn 90°:</string>
    <string name="settings_labelwaitdoubleturn">Turn 180°:</string>
    <string name="settings_buttonsave">Save</string>
    <string name="manu_title">Manual operation</string>
    <string name="manu_gripper">Gripper</string>
    <string name="manu_ns">North-South</string>
    <string name="manu_ew">East-West</string>
    <string name="manu_n">N</string>
    <string name="manu_s">S</string>
    <string name="manu_e">E</string>
    <string name="manu_w">W</string>
    <string name="manu_open">Open</string>
    <string name="manu_close">Close</string>
    <string name="manu_minuseins">-90°</string>
    <string name="manu_eins">+90°</string>
    <string name="manu_minuszwei">-180°</string>
    <string name="manu_zwei">+180°</string>
    <string name="manu_lifter">Lifter</string>
    <string name="manu_lifterinit">Initialise</string>
    <string name="manu_liftpluseins">+1 rev.</string>
    <string name="manu_liftminuseins">-1 rev.</string>
    <string name="manu_liftpluszehn">+10</string>
    <string name="manu_liftminuszehn">-10</string>
    <string name="manu_liftminuszwoelf">-12</string>
    <string name="manu_liftplusvierzehn">+14</string>
    <string name="manu_liftminusvierzehn">-14</string>

    <string name="solved_state">UUUUUUUUURRRRRRRRRFFFFFFFFFDDDDDDDDDLLLLLLLLLBBBBBBBBB</string>
    <string name="words_program">Program</string>
    <string name="words_started">started.</string>
    <string name="message_start">The Grippers must be closed and in an exactly vertical orientation.</string>

<!--    Custom Patterns for Solved Cubes:-->
<!--    We need a name:-->
    <string name="pattern_pons_asinorum">Pons Asinorum</string>
    <string name="pattern_pons_superflip">Pons Asinorum with Superflip</string>
    <string name="pattern_superflip">Superflip</string>
    <string name="pattern_crosses">Crosses</string>
    <string name="pattern_slash">Slash</string>
    <string name="pattern_cube_2">Cube ^2</string>
    <string name="pattern_cube_3">Cube ^3</string>
    <string name="pattern_ts">T\'s</string>
    <string name="pattern_stripes">Stripes</string>
    <string name="pattern_exchanged_peaks">Exchanged Peaks</string>
    <string name="pattern_anaconda">Anaconda</string>
    <string name="pattern_black_mamba">Black Mamba</string>
    <string name="pattern_python">Python</string>
    <string name="pattern_swap_centers">Swap Centers</string>
    <string name="pattern_union_jack">Union Jack</string>
    <string name="pattern_kilt">Kilt</string>
    <string name="pattern_conway">Conway\'s Glider</string>

<!--    and a move sequence pair:-->
    <string name="solution_pons_asinorum">B2 F2 L2 R2 D2 U2</string>
    <string name="solution_pons_superflip">R B L F D L R\' B2 F D\' U L D\' U R\' D\' F\' R\' U\'</string>
    <string name="solution_superflip">D\' R2 F\' D2 F2 U2 L\' R D\' R2 B F R\' U2 L\' F2 R\' U2 R\' U\'</string>
    <string name="solution_crosses">U F B\' L2 U2 L2 F\' B U2 L2 U</string>
    <string name="solution_slash">R L F B R L F B R L F B</string>
    <string name="solution_cube_2">F L F U\' R U F2 L2 U\' L\' B D\' B\' L2 U</string>
    <string name="solution_cube_3">U\' L\' U\' F\' R2 B\' R F U B2 U B\' L U\' F U R F\'</string>
    <string name="solution_ts">F2 R2 U2 F\' B D2 L2 F B</string>
    <string name="solution_stripes">F U F R L2 B D\' R D2 L D\' B R2 L F U F</string>
    <string name="solution_exchanged_peaks">F2 R2 D R2 U D F2 D\' R\' D\' F L2 F\' D R U\'</string>
    <string name="solution_anaconda">L U B\' U\' R L\' B R\' F B\' D R D\' F\'</string>
    <string name="solution_black_mamba">R D L F\' R L\' D R\' U D\' B U\' R\' D\'</string>
    <string name="solution_python">F2 R\' B\' U R\' L F\' L F\' B D\' R B L2</string>
    <string name="solution_swap_centers">U D\' R L\' F B\' U D\'</string>
    <string name="solution_union_jack">U F B\' L2 U2 L2 F\' B U2 L2 U</string>
    <string name="solution_kilt">U\' R2 L2 F2 B2 U\' R L F B\' U F2 D2 R2 L2 F2 U2 F2 U\' F2</string>
    <string name="solution_conway">D2 R2 F2 R2 U2 B2 D2 F2 L2 U2 R2 U2</string>

    <!--LOTS of patterns here:
        https://ruwix.com/the-rubiks-cube/rubiks-cube-patterns-algorithms/-->

    <string name="error1">Error 1: There is not exactly one facelet of each colour</string>
    <string name="error2">Error 2: Not all 12 edges exist exactly once</string>
    <string name="error3">Error 3: Flip error: One edge has to be flipped</string>
    <string name="error4">Error 4: Not all corners exist exactly once</string>
    <string name="error5">Error 5: Twist error: One corner has to be twisted</string>
    <string name="error6">Error 6: Parity error: Two corners or two edges have to be exchanged</string>
    <string name="error7">Error 7: No solution exists for the given maxDepth</string>
    <string name="error8">Error 8: Timeout, no solution within given time</string>
</resources>