<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/tableLayoutManu" android:layout_width="match_parent" android:layout_height="match_parent">
    <TableRow android:gravity="center" android:layout_gravity="center" android:id="@+id/tableRowManu1" android:background="@drawable/customborder1" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:id="@+id/textViewManuGripper" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manu_gripper" style="@style/TitleText"/>
    </TableRow>
    <TableRow android:layout_gravity="center" android:id="@+id/tableRowManu2" android:layout_height="wrap_content" android:layout_weight="1">
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonNS" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_ns" android:textOff="@string/manu_ns" android:layout_weight="1" style="@style/ToggleButtonText"/>
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonEW" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_ew" android:textOff="@string/manu_ew" android:layout_weight="1" style="@style/ToggleButtonText"/>
    </TableRow>
    <TableRow android:layout_gravity="center" android:id="@+id/tableRowManu3" android:layout_height="wrap_content" android:layout_weight="1">
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonN" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_n" android:textOff="@string/manu_n" android:layout_weight="1" style="@style/ToggleButtonText"/>
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonS" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_s" android:textOff="@string/manu_s" android:layout_weight="1" style="@style/ToggleButtonText"/>
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonE" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_e" android:textOff="@string/manu_e" android:layout_weight="1" style="@style/ToggleButtonText"/>
        <ToggleButton android:gravity="top|center_horizontal" android:layout_gravity="top|center_horizontal" android:id="@+id/toggleButtonW" android:background="@drawable/customtogglebutton1" android:layout_width="0dp" android:layout_height="match_parent" android:textOn="@string/manu_w" android:textOff="@string/manu_w" android:layout_weight="1" style="@style/ToggleButtonText"/>
    </TableRow>
    <TableRow android:layout_gravity="center" android:id="@+id/tableRowManu4" android:layout_height="wrap_content" android:layout_weight="1">
        <Button android:layout_gravity="center" android:id="@+id/buttonOpen" android:tag="OPEN" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_open" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonClose" android:tag="CLOSE" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_close" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
    <TableRow android:layout_gravity="center" android:id="@+id/tableRowManu5" android:layout_height="wrap_content" android:layout_weight="1">
        <Button android:layout_gravity="center" android:id="@+id/buttonMinusZwei" android:tag="-2" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_minuszwei" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonMinusEins" android:tag="-1" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_minuseins" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonEins" android:tag="1" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_eins" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonZwei" android:tag="2" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_zwei" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
    <TableRow android:gravity="center" android:layout_gravity="center" android:id="@+id/tableRowManu6" android:background="@drawable/customborder1" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:id="@+id/textViewManuLifter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manu_lifter" style="@style/TitleText"/>
    </TableRow>
    <TableRow android:gravity="center" android:layout_gravity="center" android:id="@+id/tableRowManu7" android:layout_height="wrap_content" android:layout_weight="1">
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterInit" android:tag="LIFTERINIT()" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_lifterinit" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
    <TableRow android:gravity="center" android:layout_gravity="center" android:id="@+id/tableRowManu8" android:layout_height="wrap_content" android:layout_weight="1">
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterMinusEins" android:tag="LIFT(-1) " android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_liftminuseins" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterPlusEins" android:tag="LIFT(1)" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_liftpluseins" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
    <TableRow android:gravity="center" android:layout_gravity="center" android:id="@+id/tableRowManu9" android:layout_height="wrap_content" android:layout_weight="1">
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterPlusZehn" android:tag="LIFT(10)" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_liftpluszehn" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterPlusVierzehn" android:tag="LIFT(14)" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_liftplusvierzehn" android:layout_weight="1" style="@style/ButtonText"/>
        <Button android:layout_gravity="center" android:id="@+id/buttonLifterMinusZwoelf" android:tag="LIFT(-12)" android:background="@drawable/custombutton1" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/manu_liftminuszwoelf" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
</TableLayout>