<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/tableLayoutSettings" android:layout_width="match_parent" android:layout_height="match_parent">
    <TableRow android:gravity="center" android:id="@+id/tableRowSet1" android:background="@drawable/customborder1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:id="@+id/textViewTitle1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_title1" android:color="#8080ff" style="@style/TitleText"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRowSet5"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/customborder1"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewTitle2"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:color="#8080ff"
            android:text="@string/settings_title4"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
    <TableRow android:id="@+id/tableRowSet6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">

        <Spinner
            android:id="@+id/spinner_pattern"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dropdown" />
<!--            android:layout_constraintBottom_toBottomOf="parent"
            android:layout_constraintEnd_toEndOf="parent"
            android:layout_constraintStart_toStartOf="parent"-->

    </TableRow>

    <TableRow android:gravity="center" android:id="@+id/tableRowSet10" android:background="@drawable/customborder1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center" android:id="@+id/textViewTitle3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_title5" android:color="#8080ff" style="@style/TitleText"/>
    </TableRow>
    <TableRow android:gravity="center" android:id="@+id/tableRowSet11" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@+id/buttonPatternsSave" android:background="@drawable/custombutton1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_buttonsave" android:layout_weight="1" style="@style/ButtonText"/>
    </TableRow>
</TableLayout>